added some styling to HTML elements(needs to be finished/corrected) -- started on creating save task to localStorage button -- started work on LOAD TASKS to get items from localStorage and place them where they belong on page load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 	line-height: 1;
 }
 
-textarea{
+textarea {
 	background: transparent;
 	border: none;
 	resize: none;
@@ -19,22 +19,22 @@ textarea{
 	color: black;
 	border-radius: 0;
 	border-bottom: 10px solid black;
-}
+};
 
-.description{
+.description {
 	white-space: pre-wrap;
-}
+};
 
-.time-block{
+.time-block {
 	text-align: center;
 	border-radius: 15px;
-}
+};
 
 .row {
 	white-space: pre-wrap;
 	height: 80px;
 	border-top: 1px solid white;;
-}
+};
 
 .hour {
 	background-color: #ffffff;
@@ -63,9 +63,9 @@ textarea{
 	border-bottom-right-radius: 15px;
 	background-color: #06AED5;
 	color: white;
-}
+};
 
 .saveBtn i:hover {
 	font-size: 20px;
 	transition: all .3s ease-in-out;
-}
+};
